applications/mahiron/resources/pix-smb400-gateway.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pix-smb400-gateway

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pix-smb400-gateway
  template:
    metadata:
      labels:
        app: pix-smb400-gateway
    spec:
      containers:
        - name: tailscale
          image: ghcr.io/tailscale/tailscale:v1.102.4
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9002
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: state
              mountPath: /var/lib/tailscale
        - name: relay
          image: alpine/socat:1.8.1.3
          command:
            - socat
          args:
            - TCP-LISTEN:40772,fork,reuseaddr
            - PROXY:127.0.0.1:pix-smb400.tail3fe75.ts.net:40772,proxyport=1055
          ports:
            - name: tcp
              containerPort: 40772
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 64Mi
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: pix-smb400-gateway-state
