applications/mahiron/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mahiron

spec:
  replicas: 1
  serviceName: service
  selector:
    matchLabels:
      app: mahiron
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mahiron
        agent.mackerel.starry.blue/inject: "true"
      annotations:
        agent.mackerel.starry.blue/apikey-secret-name: mackerel-apikey
        agent.mackerel.starry.blue/roles: Ggrel-DTV:mahiron
    spec:
      serviceAccountName: mahiron
      containers:
        - name: mahiron
          image: ghcr.io/rokoucha/mahiron:2026.1008.110553-nightly
          resources:
            requests:
              cpu: 400m
              memory: 512Mi
            limits:
              memory: 1Gi
          ports:
            - name: mahiron
              containerPort: 40772
          readinessProbe:
            httpGet:
              path: /api/version
              port: mahiron
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/version
              port: mahiron
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
            - name: config
              mountPath: /app/config
              readOnly: true
            - name: data
              mountPath: /app/data
            - name: tmp
              mountPath: /app/tmp
      volumes:
        - name: config
          secret:
            secretName: mahiron-config
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: tmp
          emptyDir: {}
