applications/mahiron/resources/pix-smb400-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pix-smb400-gateway

spec:
  type: ClusterIP
  selector:
    app: pix-smb400-gateway
  ports:
    - name: tcp
      port: 40772
      targetPort: tcp
      protocol: TCP
