applications/mahiron/resources/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service
  annotations:
    backend.materia.ggrel.net/forward-auth: "true"
    haproxy.org/timeout-server: 10m

spec:
  selector:
    app: mahiron
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: mahiron
      port: 40772
      targetPort: mahiron
